--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Destiny Erhabor</h1>
+            <div><a href="mailto:your.email@example.com">destinyerhabor6@example.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/Caesarsage">@github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/destiny-erhabor">@linkedin_handle</a></li>
+                    <li><a href="https://twitter.com/caesar_sage">@twitter_handle</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,13 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        University of Benin, Nigeria
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 4.41/5.00</li>
+                        <li>Chemical Engineering</li>
+                        <li>Years:</li>
                     </ul>
                 </div>
             </section>
@@ -47,6 +48,8 @@
                     Skills
                 </h2>
                 <ul>
+                    <li>Azure</li>
+                    <li>Cloud</li>
                     <li>CSS</li>
                     <li>HTML</li>
                     <li>JavaScript</li>
@@ -63,8 +66,13 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>I organize trainings for my local tech communities on trending technologies</li>
+                    <li>Promote and build emerging technology that contribute to the society</li>
+                </ul>
+                <h3>Coding Black Female (Black Codher) - Fullstack Technical mentor </h3>
+                <ul>
+                    <li>Supports learners daily and weekly either in groups or personally on html, css, nodejs and react </li>
+                    <li>Implement live pair programming sessions to debug</li>
                 </ul>
             </section>
             <section class="box">
@@ -73,10 +81,10 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>HNGi8 - Software Engineer </h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Collaborated in a diverse team consisting of 30 persons in different country to develop a chess web application plugin that is a part of bigger workspace application. Contributed by working in the backend architecture with JavaScript nodejs and centrifugo for real-time communication </li>
+                    <li>Documented other teams as well as my team plugin backend api using swaggerUI and open-api</li>
                 </ul>
             </section>
             <section class="box">
