--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <article class="box">
-            <h1>Destiny Erhabor</h1>
+            <h1>I am Destiny Erhabor</h1>
             <div><a href="mailto:your.email@example.com">destinyerhabor6@example.com</a></div>
             
             <section class="box">
