--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/Caesarsage">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/destiny-erhabor">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/caesar_sage">@twitter_handle</a></li>
+                    <li><a href="https://github.com/Caesarsage">@Caesarsage</a></li>
+                    <li><a href="https://linkedin.com/in/destiny-erhabor">@destiny-erhabor</a></li>
+                    <li><a href="https://twitter.com/caesar_sage">@caesar_sage</a></li>
                 </ul>    
             </section>
             
