--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>I am Destiny Erhabor</h1>
-            <div><a href="mailto:your.email@example.com">destinyerhabor6@example.com</a></div>
+            <h1>Destiny Erhabor</h1>
+            <div><a href="mailto:your.email@destinyerhabor6@example.com">destinyerhabor6@example.com</a></div>
             
             <section class="box">
                 <h2>
@@ -37,7 +37,7 @@
                     <ul>
                         <li>GPA: 4.41/5.00</li>
                         <li>Chemical Engineering</li>
-                        <li>Years:</li>
+                        <li>Years: 2024 </li>
                     </ul>
                 </div>
             </section>
@@ -47,14 +47,21 @@
                     <i class="fa fa-check" aria-hidden="true"></i>
                     Skills
                 </h2>
+                <h4>Programming Language</h4>
                 <ul>
-                    <li>Azure</li>
-                    <li>Cloud</li>
-                    <li>CSS</li>
-                    <li>HTML</li>
-                    <li>JavaScript</li>
-                    <li>Git</li>
-                    <li>Visual Studio Code</li>
+                    <li>Angular</li>
+                    <li>Azure</li>                    
+                    <li>Frontend Tools: HTML, CSS, JAVASCRIPT , GIT, React</li>
+                    <li>Power Platform</li>
+                    <li>Python</li> 
+                    <li>Nodejs</li>
+                </ul>
+                <h4>Soft Skills</h4>
+                <ul>
+                    <li>Communication</li>
+                    <li>Team and Collaborative work</li>
+                    <li>Problem Solving</li>
+                    <li>Critical Thinking</li>
                 </ul>
             </section>
         </article>
@@ -68,6 +75,8 @@
                 <ul>
                     <li>I organize trainings for my local tech communities on trending technologies</li>
                     <li>Promote and build emerging technology that contribute to the society</li>
+                    <li>Acquire Azure Skills by clearing the certificates(AZ900,AI900,AZ204) </li>
+                    <li>Hosted multiple events on Web Development and it's integration with Cloud Technologies</li>
                 </ul>
                 <h3>Coding Black Female (Black Codher) - Fullstack Technical mentor </h3>
                 <ul>
@@ -93,8 +102,8 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>EazySwap</h3>
+                <div>Lead a team of five (5) in developing a REST API using Nodejs with Express as the backend for the swap by barter application for Zuri Internship</div>
                 <ul>
                     <li>Cool technology used</li>
                     <li>Prize won</li>
